# litua

./: Cargo.toml  LICENSE  README.adoc  README.md  hooks.predebug.lua
.github/workflows/: build.yml
examples/: doc.txt  doc.txt.out  stress.txt
examples/enumeration/: README.adoc  doc.lit  doc.txt  hooks.enumeration.lua  hooks.modify.lua
examples/literate-programming/: README.adoc  doc.lit  doc.txt  hooks.all.lua
examples/markup/: README.adoc  doc.txt  hooks.markup.lua
examples/replacements/: README.adoc  doc.txt  hooks.replacement.lua
src/: errors.rs  lexer.depr.rs  lexer.manual-tokens.rs  lexer.rs  lib.rs  lines_with_indices.rs  litua.filter.lua  litua.lib.lua  litua.lua  litua.node.lua  litua.transform.lua  litua_node.lua  litua_stdlib.lua  litua_transform.lua  main.rs  parser.rs  tree.rs
tests/: enumeration.hooks.expected  enumeration.lexed.expected  enumeration.out.expected  enumeration.parsed.expected  literate-programming.hooks.expected  literate-programming.lexed.expected  literate-programming.out.expected  literate-programming.parsed.expected  markup.hooks.expected  markup.lexed.expected  markup.out.expected  markup.parsed.expected  replacements.hooks.expected  replacements.lexed.expected  replacements.out.expected  test.sh
tests/madness-test/: src.lit
